src/test/ui/consts/const-extern-fn/const-extern-fn-min-const-fn.stderr
error[E0658]: function pointers cannot appear in constant functions
  --> $DIR/const-extern-fn-min-const-fn.rs:4:41
   |
LL | const unsafe extern "C" fn closure() -> fn() { || {} }
   |                                         ^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_fn_ptr_basics)]` to the crate attributes to enable

error[E0658]: function pointer casts are not allowed in constant functions
  --> $DIR/const-extern-fn-min-const-fn.rs:4:48
   |
LL | const unsafe extern "C" fn closure() -> fn() { || {} }
   |                                                ^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_fn_ptr_basics)]` to the crate attributes to enable

error[E0658]: floating point arithmetic is not allowed in constant functions
  --> $DIR/const-extern-fn-min-const-fn.rs:7:42
   |
LL | const unsafe extern "C" fn use_float() { 1.0 + 1.0; }
   |                                          ^^^^^^^^^
   |
   = note: see issue #57241 <https://github.com/rust-lang/rust/issues/57241> for more information
   = help: add `#![feature(const_fn_floating_point_arithmetic)]` to the crate attributes to enable

error: pointers cannot be cast to integers during const eval
  --> $DIR/const-extern-fn-min-const-fn.rs:9:48
   |
LL | const extern "C" fn ptr_cast(val: *const u8) { val as usize; }
   |                                                ^^^^^^^^^^^^
   |
   = note: at compile-time, pointers do not have an integer value
   = note: avoiding this restriction via `transmute`, `union`, or raw pointers leads to compile-time undefined behavior

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
